Added persistenet stores

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ AuthorizationServer.App/bin
 AuthorizationServer.App/obj
 AuthorizationServer.ClientApp/bin/
 AuthorizationServer.ClientApp/obj/
+AuthorizationServer.Infrastructure/bin/
+AuthorizationServer.Infrastructure/obj/
 AuthorizationServer.ClientApp/appsettings.Development.json
 AuthorizationServer.App/appsettings.Development.json
