Added default configuration, enabled login

--- a/AuthorizationServer.App/appsettings.json
+++ b/AuthorizationServer.App/appsettings.json
@@ -9,5 +9,111 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "DefaultApplicationConfiguration": {
+    "Client": [],
+    "IdentityResources": [
+      {
+        "Id": 1,
+        "Enabled": true,
+        "Name": "openid",
+        "DisplayName": "OpenId",
+        "Description": "OpenId",
+        "Required": true,
+        "Emphasize": false,
+        "ShowDiscoveryDocument": true
+      },
+      {
+        "Id": 2,
+        "Enabled": true,
+        "Name": "profile",
+        "DisplayName": "User profile",
+        "Description": "Your user profile information (first name, last name, etc.)",
+        "Required": false,
+        "Emphasize": true,
+        "ShowDiscoveryDocument": true
+      }
+    ],
+    "IdentityResourceClaims": [
+      {
+        "Id": 1,
+        "Type": "updated_at",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 2,
+        "Type": "locale",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 3,
+        "Type": "zoneinfo",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 4,
+        "Type": "birthdate",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 5,
+        "Type": "website",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 6,
+        "Type": "picture",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 7,
+        "Type": "profile",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 8,
+        "Type": "preferred_username",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 9,
+        "Type": "nickname",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 10,
+        "Type": "middle_name",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 11,
+        "Type": "given_name",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 12,
+        "Type": "family_name",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 13,
+        "Type": "name",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 14,
+        "Type": "gender",
+        "IdentityResourceId": 2
+      },
+      {
+        "Id": 15,
+        "Type": "sub",
+        "IdentityResourceId": 1
+      }
+    ],
+    "User": [],
+    "Role": [],
+    "Tenant": [],
+    "ClientTenantMap": []
   }
 }
